# Mobile_Robot_URDF_Maker

./: .gitignore  README.md  workspace_structure.txt
install/: local_setup.sh  setup.sh
install/mobRobURDF_description/share/mobRobURDF_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobRobURDF_launch/share/mobRobURDF_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/mobRobURDF_control/: CMakeLists.txt  package.xml
src/mobRobURDF_control/config/: gazebo_controller_tricycle.yaml
src/mobRobURDF_control/config/drive/: gazebo_controller_diffDrive_2wd_caster.yaml  gazebo_controller_diffDrive_4wd.yaml  gazebo_controller_mecDrive.yaml
src/mobRobURDF_control/config/steer/: gazebo_controller_ackerSteer.yaml  gazebo_controller_triSteer.yaml
src/mobRobURDF_description/: CMakeLists.txt  package.xml
src/mobRobURDF_description/urdf/: mobRob.urdf  mobRob.urdf.xacro  mobRob.xacro
src/mobRobURDF_description/urdf/gazebo_files/: gazebo_properties.xacro  gazebo_sensors.xacro
src/mobRobURDF_description/urdf/gazebo_files/control/: gazebo_ros2_control_2wc.xacro  gazebo_ros2_control_2wc_diff.xacro  gazebo_ros2_control_3w.xacro  gazebo_ros2_control_3w_triSteer.xacro  gazebo_ros2_control_3w_tricycle.xacro  gazebo_ros2_control_4w_acker.xacro  gazebo_ros2_control_4w_diff.xacro  gazebo_ros2_control_4w_mec.xacro
src/mobRobURDF_description/urdf/submodules/: sensors.xacro
src/mobRobURDF_description/urdf/submodules/2_wheeled_caster/: base.xacro  mobRob.xacro  mobRob_2wc_diff.xacro  sensors.xacro  wheels.xacro
src/mobRobURDF_description/urdf/submodules/3_wheeled/: base.xacro  mobRob.xacro  mobRob_3w_triSteer.xacro  mobRob_3w_tricycle.xacro  sensors.xacro
src/mobRobURDF_description/urdf/submodules/4_wheeled/: base.xacro  mobRob.xacro  mobRob_4w_diff.xacro  mobRob_4w_mec.xacro  wheels.xacro
src/mobRobURDF_description/urdf/submodules/4_wheeled/ackermann/: base.xacro  mobRob.xacro  mobRob_4w_acker.xacro  wheels.xacro
src/mobRobURDF_gazebo/: package.xml  setup.cfg  setup.py
src/mobRobURDF_gazebo/models/: FYI.txt
src/mobRobURDF_gazebo/worlds/: test_world.world  warehouse_world.sdf
src/mobRobURDF_launch/: package.xml  setup.cfg  setup.py
src/mobRobURDF_launch/launch/: gazebo_test.launch.py  urdf_test.launch.py
src/mobRobURDF_launch/rviz/: rviz_gazebo_test.rviz  rviz_test.rviz
src/mobRobURDF_wizard/: package.xml  setup.cfg  setup.py
src/mobRobURDF_wizard/mobRobURDF_wizard/: RobotWizard.py  robot_input_page.py  robot_wizard.py  urdf_preview_page.py  utils.py
src/mobRobURDF_wizard/mobRobURDF_wizard/classes/: ConfigurationPage.py  FutureFeaturesPage.py  OpenGLWidget.py  RobotTypeSelectionPage.py  URDFManager.py  WelcomePage.py  opengl_widget.py  opengl_widget_old.py  robot_input_page.py  urdf_preview_page.py
src/mobRobURDF_wizard/mobRobURDF_wizard/classes/pages/: ConfigurationPage.py  ControlConfigurationPage.py  FutureFeaturesPage.py  RobotTypeSelectionPage.py  WelcomePage.py
src/mobRobURDF_wizard/mobRobURDF_wizard/classes/temp/: inertial_macros.xacro  mobRob.xacro
src/mobRobURDF_wizard/mobRobURDF_wizard/classes/temp/2_wheeled_caster/: base.xacro  gazebo_sensors.xacro  mobRob.xacro
src/mobRobURDF_wizard/mobRobURDF_wizard/classes/temp/3_wheeled/: base.xacro  mobRob.xacro  wheels.xacro
src/mobRobURDF_wizard/mobRobURDF_wizard/classes/temp/4_wheeled/: base.xacro  mobRob.xacro
src/mobRobURDF_wizard/mobRobURDF_wizard/temp/: base.xacro  mobRob.xacro
src/mobRobURDF_wizard/mobRobURDF_wizard/utils/: utils.py
(+22 files in other folders)
