<package format="3">
  <name>mobRobURDF_control</name>
  <version>0.0.1</version>
  <description>Package for containing control config files</description>

  <maintainer email="a.pahlevani1998@gmail.com">Ali Pahlevani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
